# IQuizt

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  cppcheck_action_result.sh  cppcheck_report.txt  test_build.sh  ubuntu_build.sh
.github/workflows/: c-cpp.yml  release.yml
assets/quizzes/: sample.quiz  valami.quiz
docs/: docs.md
src/: CMakeLists.txt  main.cpp
src/model/: CMakeLists.txt  model.cpp  model.h  quizitem.cpp  quizitem.h
src/persistence/: CMakeLists.txt  persistence.cpp  persistence.h
src/profile/: CMakeLists.txt  profile.cpp  profile.h
src/view/: CMakeLists.txt  mainwidget.cpp  mainwidget.h  profilecreationdialog.cpp  profilecreationdialog.h  quizitemeditor.cpp  quizitemeditor.h  quizitemselector.cpp  quizitemselector.h  quizsetdisplay.cpp  quizsetdisplay.h
tests/: CMakeLists.txt  README.md  tst_quizitemtest.cpp
tests/MainWidgetTest/: CMakeLists.txt  tst_mainwidgettest.cpp
tests/PersistenceTest/: CMakeLists.txt  tst_persistencetest.cpp
tests/QuizItemTest/: CMakeLists.txt  tst_quizitemtest.cpp
tests/quizitemedtiortest/: CMakeLists.txt  tst_quizitemeditortest.cpp
